# BoardGameBench

./: .gitignore  GAMES.md  README.md  pyproject.toml
boardgamebench/: __main__.py  benchmark.py  cli.py  llm_player.py  model_config.py  progress.py  report.py
boardgamebench/games/: __init__.py  base.py  breakthrough.py  connect_four.py  dots_and_boxes.py  gomoku.py  hex.py  othello.py  search.py
models/: example-openai-compatible.json  ollama-gemma4.json  ollama-nemotron-3-super.json  ollama-nemotron3-33b.json
