[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boardgamebench"
version = "0.1.1"
description = "A multi-game LLM benchmark for compact deterministic board games."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Homer Quan" }]
dependencies = []
keywords = ["board-games", "gomoku", "benchmark", "llm", "alpha-beta", "minimax", "cli", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Games/Entertainment :: Board Games",
]

[project.urls]
Homepage = "https://github.com/homerquan/BoardGameBench"
Repository = "https://github.com/homerquan/BoardGameBench"

[project.scripts]
boardgamebench = "boardgamebench.cli:run_cli"

[tool.setuptools]
packages = [
  "boardgamebench",
  "boardgamebench.games",
]
